--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,6 @@ opacity: 0.6;
 }
 
 footer{
-    background: url("../assets/prueba.jpg") top center no-repeat;
+    background: url("../assets/logo/prueba.jpg") top center no-repeat;
     background-size: cover;
 }
